# objectRecoStudy

./: CMakeLists.txt  ClassicalStudy.cpp  ProjectPaths.cpp  ProjectPaths.h  ReadMe.md  UiHelpers.cpp  UiHelpers.h  UiStrings.cpp  UiStrings.h  dnn_02_caffe_example_mobilenet.cpp  mask_rcnn.cpp  objectRecoStudy.cpp  objectRecoStudy.rc  objectRecoStudyDlg.cpp  objectRecoStudyDlg.h  resource.h  stdafx.h
cmake/: DefaultPaths.cmake  ProjectVersion.cmake  Version.h.in
docs/: BUILD.md  RUN.md  algorithms.md  models.md
scripts/: build.bat  download_models.bat  download_models.py  generate_icons.py  generate_icons_fallback.py  install.bat  run.bat
